SYNCOPE-1332: convert empty collection creation to immutable APIs