@@ -24,7 +24,6 @@ import com.fasterxml.jackson.annotation.JsonPropertyOrder;
 import io.swagger.v3.oas.annotations.media.Schema;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import javax.xml.bind.annotation.XmlElement;
@@ -156,7 +155,7 @@ public class AnyObjectCR extends AnyCR implements GroupableRelatableTO {
 
     @Override
     public List<MembershipTO> getDynMemberships() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
