@@ -24,7 +24,6 @@ import com.fasterxml.jackson.annotation.JsonPropertyOrder;
 import io.swagger.v3.oas.annotations.media.Schema;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
@@ -237,7 +236,7 @@ public class UserCR extends AnyCR implements GroupableRelatableTO {
 
     @Override
     public List<MembershipTO> getDynMemberships() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @XmlElementWrapper(name = "roles")
