@@ -18,7 +18,6 @@
  */
 package org.apache.syncope.core.persistence.api.entity;
 
-import java.util.Collections;
 import java.util.List;
 import org.apache.syncope.common.lib.types.MappingPurpose;
 import org.apache.syncope.core.persistence.api.entity.resource.Mapping;
@@ -139,6 +138,6 @@ public class LinkingMappingItem implements MappingItem {
 
     @Override
     public List<? extends Implementation> getTransformers() {
-        return Collections.emptyList();
+        return List.of();
     }
 }
