@@ -20,7 +20,6 @@ package org.apache.syncope.core.provisioning.java.propagation;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
@@ -302,7 +301,7 @@ public abstract class AbstractPropagationTaskExecutor implements PropagationTask
              * update, this entity used to have the current resource assigned by more than one mean (for example,
              * two different memberships with the same resource).
              */
-            Collection<String> resources = Collections.emptySet();
+            Collection<String> resources = Set.of();
             if (task.getEntityKey() != null && task.getAnyTypeKind() != null) {
                 switch (task.getAnyTypeKind()) {
                     case USER:
