@@ -18,7 +18,6 @@
  */
 package org.apache.syncope.ext.self.keymaster.cxf.client;
 
-import java.util.Collections;
 import java.util.List;
 import org.apache.syncope.common.keymaster.client.api.DomainOps;
 import org.apache.syncope.common.keymaster.client.api.model.Domain;
@@ -39,21 +38,21 @@ public class SelfKeymasterInternalDomainOps implements DomainOps {
 
     @Override
     public List<Domain> list() {
-        return AuthContextUtils.callAs(SyncopeConstants.MASTER_DOMAIN, keymasterUser, Collections.emptyList(), () -> {
+        return AuthContextUtils.callAs(SyncopeConstants.MASTER_DOMAIN, keymasterUser, List.of(), () -> {
             return logic.list();
         });
     }
 
     @Override
     public Domain read(final String key) {
-        return AuthContextUtils.callAs(SyncopeConstants.MASTER_DOMAIN, keymasterUser, Collections.emptyList(), () -> {
+        return AuthContextUtils.callAs(SyncopeConstants.MASTER_DOMAIN, keymasterUser, List.of(), () -> {
             return logic.read(key);
         });
     }
 
     @Override
     public void create(final Domain domain) {
-        AuthContextUtils.callAs(SyncopeConstants.MASTER_DOMAIN, keymasterUser, Collections.emptyList(), () -> {
+        AuthContextUtils.callAs(SyncopeConstants.MASTER_DOMAIN, keymasterUser, List.of(), () -> {
             logic.create(domain);
             return null;
         });
@@ -61,7 +60,7 @@ public class SelfKeymasterInternalDomainOps implements DomainOps {
 
     @Override
     public void changeAdminPassword(final String key, final String password, final CipherAlgorithm cipherAlgorithm) {
-        AuthContextUtils.callAs(SyncopeConstants.MASTER_DOMAIN, keymasterUser, Collections.emptyList(), () -> {
+        AuthContextUtils.callAs(SyncopeConstants.MASTER_DOMAIN, keymasterUser, List.of(), () -> {
             logic.changeAdminPassword(key, password, cipherAlgorithm);
             return null;
         });
@@ -69,7 +68,7 @@ public class SelfKeymasterInternalDomainOps implements DomainOps {
 
     @Override
     public void adjustPoolSize(final String key, final int maxPoolSize, final int minIdle) {
-        AuthContextUtils.callAs(SyncopeConstants.MASTER_DOMAIN, keymasterUser, Collections.emptyList(), () -> {
+        AuthContextUtils.callAs(SyncopeConstants.MASTER_DOMAIN, keymasterUser, List.of(), () -> {
             logic.adjustPoolSize(keymasterUser, maxPoolSize, minIdle);
             return null;
         });
@@ -77,7 +76,7 @@ public class SelfKeymasterInternalDomainOps implements DomainOps {
 
     @Override
     public void delete(final String key) {
-        AuthContextUtils.callAs(SyncopeConstants.MASTER_DOMAIN, keymasterUser, Collections.emptyList(), () -> {
+        AuthContextUtils.callAs(SyncopeConstants.MASTER_DOMAIN, keymasterUser, List.of(), () -> {
             logic.delete(key);
             return null;
         });
